WIP for CSS overlay click through prevention stuff with Z-indexes

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-property-editor.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-property-editor.less
@@ -1,13 +1,18 @@
 .umb-property-editor.-not-clickable {
-    pointer-events: none;
+    // pointer-events: none;
 }
 
 .umb-property-editor {
     position:relative;
 }
 
-.umb-property-editor .overlay {
-    background: rgba(255,0,0,0.5);
+.umb-property-editor__view{
+    z-index:1;
+    position:relative;
+}
+
+.umb-property-editor__overlay {
+    background: rgba(255,0,255,0.5);
     display: block;
     position: absolute;
     top:0;
@@ -15,4 +20,6 @@
     height:100%;
     width:100%;
     cursor: not-allowed;
+    user-select: none;
+    z-index:2;
 }
